# Maghz

./: .coderabbit.yaml  .editorconfig  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  MAGHZ-PROGRAM-HANDOFF.md  README.md  TODO.md  compose.yaml  pyproject.toml
.claude/: settings.json
.claude/hooks/: setup-env.sh
.claude/skills/agy/: SKILL.md
.claude/skills/agy/scripts/: agy.py
.claude/skills/applescript/examples/: objc-ffi-bridge.js  sdef-routing.js
.claude/skills/code-review/: SKILL.md
.claude/skills/code-review/data/: refuted-classes.yaml
.claude/skills/code-review/references/: coderabbit.md  greptile.md  macroscope.md
.claude/skills/code-review/scripts/: review_rail.py
.claude/skills/codex/: SKILL.md
.claude/skills/notebooklm/: SKILL.md
.claude/skills/notebooklm/references/: auth-profiles.md  command-reference.md
.claude/workflows/: estate.js  maghz-deepen.js  maghz-doc-hygiene.js  rebuild-code.js
.codex/: config.toml
.greptile/: config.json  files.json  rules.md
.macroscope/: ignore.md
admin/: README.md  __init__.py  __main__.py  automation.py  core.py  db.py  infra.py  mcp.py  profile.py  rails.py  remote.py  runtime.py  settings.py
admin/automation/: __init__.py  engine.py  model.py
admin/core/: __init__.py  model.py  status.py
admin/infra/: __init__.py  runner.py  stack.py
admin/mcp/: __init__.py  model.py  ops.py
admin/rails/: __init__.py  cloud.py  ledger.py  n8n.py  schema.py  sync.py
admin/remote/: __init__.py  connection.py  ops.py
admin/runtime/: __init__.py  lanes.py  rails.py  receipts.py  resilience.py
admin/settings/: __init__.py  config.py
db/: cron.sql  routines.sql  schema.sql
db/init/: n8n.sql
db/search/: synonyms.syn  thesaurus.ths
docs/.api/: apscheduler.md  rclone.md  watchfiles.md  workspace-mcp.md
docs/design/: PLAN.md  asyncssh.md  automation.md  automation.worklist.md  cloud-sync.md  cloud-sync.worklist.md  existing-rails.md  existing-rails.worklist.md  integrations.md  integrations.worklist.md  mcp.md  mcp.worklist.md  n8n.md  n8n.worklist.md  remote.md  remote.worklist.md  runtime.md  runtime.worklist.md
docs/laws/: README.md  landing.md  patterns.md  scars.md  topology.md
docs/standards/: ops-doctrine.md
hook/: server.py
image/: Dockerfile
