[project]
name = "maghz"
version = "0.1.0"
description = "Agent-facing tooling for the Maghz second-brain ledger."
requires-python = ">=3.15"
dependencies = [
    "anyio>=4.14.0",               # runtime: structured concurrency; sole subprocess/async owner (psql/heptabase/nlm process calls)
    "beartype>=0.22.2",            # runtime: O(1) call-boundary type enforcement
    "cyclopts>=4.18.0",            # runtime: CLI binding for the agent-first `maghz` operator
    "msgspec>=0.21.1",             # runtime: zero-copy wire structs + JSON envelope encode
    "pydantic>=2.13.4",            # runtime: domain/result validation
    "pydantic-settings>=2.14.1",   # runtime: validated typed settings (MAGHZ_ prefix); decomposes the Forge DSN
    "expression>=5.6.0",           # runtime: Result/Option ROP rails
    "stamina>=26.1.0",             # runtime: typed retry for boundary calls
    "structlog>=26.1.0",           # observability: structured JSON diagnostics to stderr
    "psutil>=7.2.2",               # runtime: resource snapshots for envelope receipts
    "watchfiles>=1.1.0",           # automation: filesystem-change watch trigger; anyio stop_event-driven awatch generator
    "apscheduler>=4.0.0a6",        # automation: 4.x AsyncScheduler cron trigger; native anyio, async ctx-mgr lifecycle. 4.x final unpublished — pinned to the latest 4.x prerelease; lift to >=4.0.0 when it lands.
    "httpx>=0.28.1",               # transport: query-time Ollama embedding calls (localhost:11434)
    "asyncssh>=2.23.1",            # transport: sole VPS SSHv2/SFTP client (exec/deploy); pure-Python wheel, cp315-clean. EPL-2.0 OR GPL-2.0+ (unmodified library use).
    "frozendict>=2.4.7",           # data: hashable immutable map backing every static dispatch/correspondence/env-projection table across the rails; pure-Python `py3-none-any` wheel, cp315-clean. Sole immutable-map idiom — no MappingProxyType; `.get` projects to expression.Option.
    "pg8000>=1.31.5",              # data: pure-Python PostgreSQL driver; zero native build, installs clean on CPython 3.15 (psycopg/asyncpg binary wheels lag 3.15). Lift to psycopg[binary] when cp315 wheels land.
    "sqlglot",                     # data: pure-Python SQL parse/transpile/lineage for schema + ledger query tooling; cp315-clean
    "pulumi>=3.0",                 # infra: IaC engine SDK; pure-Python, drives the pulumi CLI + provider plugins via the Automation API
    "pulumi-docker>=5.0.0",        # infra: docker.Container/Volume/Network desired-state resources
    "pulumi-docker-build>=0.0.19", # infra: BuildKit docker_build.Image for the custom PG image build
]

[project.scripts]
maghz = "admin.__main__:main"

# --- [BUILD] ---------------------------------------------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["admin"]

# --- [UV] ------------------------------------------------------------------

[tool.uv]
package =   true
cache-dir = ".cache/uv"

[tool.uv.sources]
beartype = { git = "https://github.com/beartype/beartype.git", rev = "f370a0b1733413681e7a72bf36fbe839e60b3c85" }

# --- [TY] ------------------------------------------------------------------

[tool.ty.environment]
python-platform = "all"
python-version =  "3.15"

[tool.ty.analysis]
respect-type-ignore-comments = false

[tool.ty.src]
exclude = [
    ".artifacts",
    ".cache",
    ".claude/skills/**/.cache",
    ".claude/worktrees",
    ".venv",
]

[tool.ty.rules]
all = "error"

[tool.ty.terminal]
error-on-warning = true

# --- [MYPY] ----------------------------------------------------------------

# `ty` is the binding type gate; mypy is advisory over `admin`.
# Mypy-only divergences stay in overrides because `ty` rejects inline type-ignore comments.
[tool.mypy]
files =                   ["admin"]
python_version =          "3.15"
cache_dir =               ".cache/mypy"
strict =                  true
pretty =                  true
warn_unreachable =        true
explicit_package_bases =  true
warn_unused_configs =     true
disallow_any_explicit =   true
disallow_any_unimported = false  # pg8000 (the pure-Python CPython-3.15 driver) ships no stubs; its boundary types are untyped by necessity
plugins =                 ["pydantic.mypy"]
enable_error_code = [
    "exhaustive-match",
    "explicit-override",
    "ignore-without-code",
    "redundant-self",
    "truthy-bool",
    "truthy-iterable",
    "unused-awaitable",
]
exclude = [
    "^\\.artifacts/",
    "^\\.cache/",
    "^\\.claude/",
    "^\\.venv/",
    "^build/",
    "^dist/",
]

[tool.pydantic-mypy]
init_typed =                    true
init_forbid_extra =             true
warn_required_dynamic_aliases = true
warn_untyped_fields =           true

[[tool.mypy.overrides]]
module =                 ["pg8000", "pg8000.*"]  # the pure-Python PG driver lacks py.typed coverage
ignore_missing_imports = true

# --- [RUFF] ----------------------------------------------------------------

[tool.ruff]
cache-dir =        ".cache/ruff"
preview =          true
line-length =      150
target-version =   "py315"
extend-exclude = [
    "**/.artifacts/**",
    "**/.cache/**",
    "**/.claude/skills/**/.cache/**",
    "**/.claude/worktrees/**",
    "**/.history/**",
]

[tool.ruff.format]
line-ending =               "lf"
docstring-code-format =     true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # --- [FORMATTER]
    "COM812",  # ruff format owns trailing commas
    "ISC001",  # ruff format owns implicit string concatenation
    # --- [MATCH_DISPATCH]
    "RET504",  # named intermediates keep flow pipelines readable
    "RET505",  # explicit match dispatch keeps exhaustive arms visible
    "RET506",  # explicit error branches keep ROP rails visible
    "SIM108",  # match/case owns dispatch, not ternaries
    "SIM114",  # match/case owns dispatch, not merged if arms
    # --- [ERROR_RAILS]
    "EM101",   # frozen errors carry inline messages
    "EM102",   # error constructors carry formatted context
    "TRY003",  # domain errors carry descriptive messages
    "TRY301",  # `@safe` ROP boundaries may raise inside the guarded call
    "TRY400",  # structlog `.error()` is valid outside exception handlers
    # --- [DOCSTRINGS]
    "DOC502",  # Raises sections may document propagated helper exceptions
    # --- [SEMANTIC_ORDER]
    "RUF022",  # semantic public-surface order beats alphabetical `__all__`
    "RUF023",  # semantic slot order beats alphabetical `__slots__`
    # --- [WORKFLOW]
    "TD003",   # TODO links are not required for local maintenance notes
    "FIX002",  # TODO comments are accepted source markers
    "INP001",  # the tooling package is an implicit namespace
    "CPY001",  # top-level LICENSE owns copyright notice
    # --- [SECTION_DIVIDERS]
    "ERA001",  # compact `# --- [LABEL]` subsection dividers are source structure
    # --- [BEARTYPE_CLAW]
    "TC001",   # beartype_this_package runtime-evaluates every annotation; type-only import deferral breaks at call time
    "TC002",   # ditto for third-party type-only imports under the claw
    "TC003",   # ditto for stdlib type-only imports under the claw
]

[tool.ruff.lint.per-file-ignores]
"__init__.py"                     = ["F401", "RUF067"]  # admin/__init__.py runs the beartype_this_package claw — a required init-time bootstrap, not a re-export
"**/.claude/skills/**/scripts/**" = ["ANN001", "ANN401", "E501", "ERA001", "PLC0415", "PLR0911", "PLR0912", "PLR0915", "S603", "S607", "TRY300"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any =      false
mypy-init-return =        true
suppress-dummy-args =     true
suppress-none-returning = true

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "beartype.BeartypeConf",
    "msgspec.Meta",
    "msgspec.field",
    "pydantic.ConfigDict",
    "pydantic.Field",
    "pydantic.PrivateAttr",
    "stamina.retry",
]

[tool.ruff.lint.flake8-builtins]
ignorelist = ["frozendict", "id", "type", "input", "format", "hash", "exec"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
ban-lazy =             "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"abc.ABC".msg =                  "Use typing.Protocol — structural subtyping, no inheritance hierarchies."
"abc.abstractmethod".msg =       "Use typing.Protocol — structural subtyping replaces nominal."
"asyncio".msg =                  "Use anyio — run/sleep/gather/Lock/Event/Semaphore/Queue all have anyio equivalents."
"contextlib.suppress".msg =      "Use Result rails or a marked boundary adapter — suppress hides fallibility."
"http.client".msg =              "Use httpx behind a validated adapter — direct stdlib HTTP bypasses timeout, retry, and observability policy."
"json.dumps".msg =               "Use msgspec.json.encode() — C-accelerated, gc=False struct support."
"json.loads".msg =               "Use msgspec.json.decode(buf, type=T) — schema-validated, zero-copy deserialization."
"logging.basicConfig".msg =      "Logging pipeline configured via structlog — never configure stdlib directly."
"logging.getLogger".msg =        "Use structlog.get_logger() — stdlib logging bypasses structured pipeline."
"os.environ".msg =               "Use pydantic-settings BaseSettings — validated, typed config; never read env vars directly."
"os.getenv".msg =                "Use pydantic-settings BaseSettings — validated, typed config at startup; not scattered env reads."
"pydantic.validator".msg =       "Use @field_validator or @model_validator — pydantic.validator is deprecated v1 API."
"requests".msg =                 "Use httpx behind a typed adapter — direct requests imports are not an approved transport surface."
"returns".msg =                  "Use expression.Result / expression.Option — returns is not an approved rail surface."
"subprocess.run".msg =           "Use anyio.run_process() — async, cancellation-aware, structured concurrency."
"subprocess.Popen".msg =         "Use anyio.open_process() — async process handle with structured teardown."
"time.sleep".msg =               "Use anyio.sleep() — time.sleep blocks the event loop thread."
"typing.Any".msg =               "Use precise type parameters or object at validated boundaries; Any requires explicit boundary justification."
"typing.Optional".msg =          "Use Result/Option for fallibility; use T | None only for non-fallible absence."
"typing.TypeAlias".msg =         "Use PEP 695 type aliases (`type Name = ...`) — TypeAlias is legacy syntax."
"typing.TypeVar".msg =           "Use PEP 695 type parameters — TypeVar is legacy generic syntax."
"typing.cast".msg =              "Use TypeGuard/TypeIs, validated adapters, or pattern narrowing; cast erases checker evidence."
"urllib.request".msg =           "Use httpx behind a typed adapter — direct urllib imports bypass transport policy."

[tool.ruff.lint.flake8-type-checking]
strict =                         true
exempt-modules =                 ["typing", "typing_extensions"]
runtime-evaluated-base-classes = ["msgspec.Struct", "pydantic.BaseModel", "pydantic.RootModel", "pydantic_settings.BaseSettings"]
runtime-evaluated-decorators =   ["beartype.beartype", "pydantic.computed_field", "pydantic.field_validator", "pydantic.model_validator", "pydantic.validate_call"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
combine-as-imports =         true
force-sort-within-sections = true
lines-after-imports =        2
order-by-type =              false
split-on-trailing-comma =    false

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.field_validator", "pydantic.model_validator"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
ignore-var-parameters = true
convention =            "google"
ignore-decorators =     ["typing.overload", "typing.override"]
property-decorators =   ["pydantic.computed_field"]

[tool.ruff.lint.pydoclint]
ignore-one-line-docstrings = true

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["__get_pydantic_core_schema__", "__get_pydantic_json_schema__"]
allow-magic-value-types =   ["str", "bytes", "int"]
max-args =          8
max-bool-expr =     3
max-branches =      6
max-locals =        10
max-nested-blocks = 4
max-public-methods = 10
max-statements =    30
